[package]
name = "vrcounter"
version = "0.1.0"
authors = ["Jeffrey Yu <wehjin@gmail.com>"]

[dependencies]
libc = "0.2.15"
glium = "0.15.0"
openvr = { git = "https://github.com/wehjin/rust-openvr" }
openvr_sys = {git="https://github.com/wehjin/rust-openvr-sys"}
nalgebra = "0.8.2"
image = "0.10.1"
rusttype = "0.2.0"
unicode-normalization = "^0.1.2"
cage = {git="https://github.com/wehjin/rust-cage"}
rand = "0.3"

[lib]
name = "vrcounter"
path = "src/lib.rs"
